force-app/main/default/objects/Application_Party_Role__c/Application_Party_Role__c.object-meta.xml
<CustomObject>
    <label>Application Party Role</label>
    <nameField>
        <displayFormat>APR-{000000}</displayFormat>
        <label>Application Party Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Party Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>