force-app/main/default/objects/Application_Party_Role__c/fields/Is_Director__c.field-meta.xml
<CustomField>
    <fullName>Is_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this party is a Director of the company.</description>
    <label>Is Director</label>
    <type>Checkbox</type>
</CustomField>