force-app/main/default/objects/Application_Party_Role__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the primary shareholder, authorised user, or contact for this application.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>