force-app/main/default/objects/Application_Party_Role__c/fields/Is_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Is_Shareholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this party is a Shareholder of the company.</description>
    <label>Is Shareholder</label>
    <type>Checkbox</type>
</CustomField>