force-app/main/default/objects/Application_Party_Role__c/fields/KYC_Completed__c.field-meta.xml
<CustomField>
    <fullName>KYC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether KYC checks for this party role are complete.</description>
    <label>KYC Completed</label>
    <type>Checkbox</type>
</CustomField>