force-app/main/default/objects/Application_Party_Role__c/fields/KYC_Risk_Flags__c.field-meta.xml
<CustomField>
    <fullName>KYC_Risk_Flags__c</fullName>
    <description>Summary of key risk flags related to this party and role.</description>
    <label>KYC Risk Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>