force-app/main/default/objects/Application_Party_Role__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <description>Ownership stake (0-100%) for shareholders or UBOs.</description>
    <label>Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>