force-app/main/default/objects/Application_Party_Role__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Party playing this role within the application.</description>
    <label>Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Application Party Roles</relationshipLabel>
    <relationshipName>Application_Party_Roles_For_Party</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>