force-app/main/default/objects/Application_Party_Role__c/fields/Position_or_Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Position_or_Role_Description__c</fullName>
    <description>Job title or role description for authorised users, directors, or signatories.</description>
    <label>Position / Role Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>