force-app/main/default/objects/Application_Party_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the party within the onboarding application.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Authorised_User</fullName>
                <label>Authorised User</label>
            </value>
            <value>
                <fullName>Contact_Person</fullName>
                <label>Contact Person</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Signatory</fullName>
            </value>
            <value>
                <fullName>UBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>