force-app/main/default/objects/Application_Party_Role__c/fields/Role_Summary__c.field-meta.xml
<CustomField>
    <fullName>Role_Summary__c</fullName>
    <description>Formula field that displays the concatenated roles (Shareholder, Director, or both).</description>
    <formula>IF(Is_Shareholder__c &amp;&amp; Is_Director__c, 
    &quot;Shareholder; Director&quot;,
IF(Is_Shareholder__c, 
    &quot;Shareholder&quot;,
IF(Is_Director__c, 
    &quot;Director&quot;, 
    &quot;&quot;)))</formula>
    <label>Role Summary</label>
    <type>Text</type>
</CustomField>