force-app/main/default/objects/Application_Party_Role__c/fields/Same_As_Party__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this role&apos;s data was prefilled from another party (for &apos;Same as shareholder&apos; UX).</description>
    <label>Same As Party</label>
    <type>Checkbox</type>
</CustomField>