force-app/main/default/objects/Application_Party_Role__c/fields/Trade_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Trade_Frequency__c</fullName>
    <description>Usual trade or investment frequency for this authorised user.</description>
    <label>Trade Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>