force-app/main/default/objects/Application_Party_Role__c/fields/Trading_Experience__c.field-meta.xml
<CustomField>
    <fullName>Trading_Experience__c</fullName>
    <description>Trading experience for authorised users (FX, Digital Assets, Equities, etc.).</description>
    <label>Trading Experience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital_Assets</fullName>
                <label>Digital Assets</label>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Foreign_Exchange</fullName>
                <label>Foreign Exchange</label>
            </value>
            <value>
                <fullName>Futures</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>