force-app/main/default/objects/Application_Party_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Onboarding_Application__c</columns>
    <columns>Party__c</columns>
    <columns>Role__c</columns>
    <columns>Same_As_Party__c</columns>
    <columns>Is_Primary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>